feat: site rewrite blog

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -12,6 +12,21 @@ const { pageTitle = "Jimmy Li" } = Astro.props;
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
     <meta name="generator" content={Astro.generator} />
+    <link rel="sitemap" href="/sitemap-index.xml" />
+    <meta name="author" content="Jimmy Li" />
+    <meta
+      name="description"
+      content="Hey, I'm Jimmy! Welcome to my personal website."
+    />
+    <meta
+      name="keywords"
+      content="jimmy li, cybersecurity, ctfs, jimmy li security"
+    />
+    <meta name="og:title" content={pageTitle} />
+    <meta
+      name="og:description"
+      content="Hey, I'm Jimmy! Welcome to my personal website."
+    />
     <title>{pageTitle}</title>
   </head>
   <body class="flex min-h-screen flex-col">
