--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -4,6 +4,14 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 
 const projects = [
   {
+    title: "Personal Website",
+    description: "My personal website built with Astro.",
+    links: [
+      { label: "Github", url: "https://github.com/jimmyl02/website" },
+      { label: "Website (You're on it!)", url: "https://jimmyli.us" },
+    ],
+  },
+  {
     title: "rVPN",
     description:
       "rVPN is an identity based Wireguard VPN control and data plane. The goal is to greatly simplify making any server a VPN entry point as well as clients connecting to the VPN through native clients.",
