feat: minor updates

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,33 +37,34 @@ const recentPosts = sortedPosts.slice(0, 2);
     <p>
       I'm a software engineer with a passion for distributed systems, security,
       and machine learning. I currently work on building and scaling the core
-      product, platform + infrastructure, and engineering team at <a
+      product, platform infrastructure, and engineering organization at <a
         href="https://conversion.ai">Conversion</a
       >.
     </p>
 
     <p>
-      Previously, I was a part of the infrastructure security team at <a
+      Previously, I was on the infrastructure security team at <a
         href="https://www.pinterest.com">Pinterest</a
-      > where I built large scale systems to securely distribute <a
+      >, where I built large-scale systems to securely distribute <a
         href="https://en.wikipedia.org/wiki/Public_key_infrastructure"
         >identity</a
       > and <a href="https://github.com/pinterest/knox">secrets</a> across the company.
-      I had the privilege to work on multiple tier 1 services critical to the company's
-      success with many talented engineers and teammates.
+      I worked on several tier-1 services critical to Pinterest's operations alongside
+      many talented engineers.
     </p>
 
     <p>
-      I'm also fortunate to have had an early interest in security with a focus
-      on web application security. I competed with <a href="https://redpwn.net"
+      I've also had a long-standing interest in security, with a focus on web
+      application security. I competed in CTFs with <a href="https://redpwn.net"
         >redpwn</a
-      > and <a href="https://dicega.ng">dicegang</a> in many CTFs and met many great
-      friends and mentors along the way.
+      > and <a href="https://dicega.ng">dicegang</a> where I learned a great deal
+      and met many close friends and mentors.
     </p>
 
     <p>
-      I'm based in San Francisco and in my free time I like to share my musings
-      on all things <a href="/writing">engineering</a>. Please reach out if
+      I'm based in San Francisco, and in my free time I enjoy <a href="/writing"
+        >sharing my thoughts</a
+      > on all things engineering, systems, and security. Feel free to reach out if
       you'd like to chat! You can find me on <a
         href="https://www.linkedin.com/in/jimmy-li1/">linkedin</a
       >, <a href="https://twitter.com/jimfutsu">twitter</a>, <a
