--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -29,7 +29,7 @@ const projects = [
       },
       {
         label: "Blog Post",
-        url: "https://blog.jimmyli.us/articles/2024-02/Firefox-Extension",
+        url: "https://jimmyli.us/writing/firefox-extension/",
       },
     ],
   },
@@ -37,10 +37,7 @@ const projects = [
     title: "guessr.app",
     description:
       "Guessr is a multiplayer real-time song guessing game with a horizontally scalable architecture built on Redis and WebSockets.",
-    links: [
-      { label: "Website", url: "https://guessr.app" },
-      { label: "Github", url: "https://github.com/jimmyl02/guessrapp" },
-    ],
+    links: [{ label: "Github", url: "https://github.com/jimmyl02/guessrapp" }],
   },
 ];
 ---
