feat: update meta description

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -16,16 +16,16 @@ const { pageTitle = "Jimmy Li" } = Astro.props;
     <meta name="author" content="Jimmy Li" />
     <meta
       name="description"
-      content="Hey, I'm Jimmy! Welcome to my personal website."
+      content="Hey, I'm Jimmy! Welcome to my personal website where I share my thoughts on engineering, systems, and security."
     />
     <meta
       name="keywords"
-      content="jimmy li, cybersecurity, ctfs, jimmy li security"
+      content="jimmy li, engineering, systems, cybersecurity, ctfs, security"
     />
     <meta name="og:title" content={pageTitle} />
     <meta
       name="og:description"
-      content="Hey, I'm Jimmy! Welcome to my personal website."
+      content="Hey, I'm Jimmy! Welcome to my personal website where I share my thoughts on engineering, systems, and security."
     />
     <title>{pageTitle}</title>
   </head>
