chore: ts no check

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -42,6 +42,7 @@ const { pageTitle = "Jimmy Li" } = Astro.props;
 
   <!-- Google tag (gtag.js) -->
   <script>
+    // @ts-nocheck
     window.dataLayer = window.dataLayer || [];
     function gtag() {
       dataLayer.push(arguments);
