feat: home page update

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,12 +45,14 @@ const recentPosts = sortedPosts.slice(0, 2);
     <p>
       Previously, I was on the infrastructure security team at <a
         href="https://www.pinterest.com">Pinterest</a
-      >, where I built large-scale systems to securely distribute <a
+      >, where I built large-scale systems to securely <a
         href="https://en.wikipedia.org/wiki/Public_key_infrastructure"
-        >identity</a
-      > and <a href="https://github.com/pinterest/knox">secrets</a> across the company.
-      I worked on several tier-1 services critical to Pinterest's operations alongside
-      many talented engineers.
+        >distribute identity</a
+      >, <a href="https://en.wikipedia.org/wiki/Authorization"
+        >authorize access</a
+      >, and <a href="https://github.com/pinterest/knox">manage secrets</a> across
+      the company. I worked on several tier-1 services critical to Pinterest's operations
+      alongside many talented engineers.
     </p>
 
     <p>
