feat: update main text

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,14 +45,15 @@ const recentPosts = sortedPosts.slice(0, 2);
     <p>
       Previously, I was on the infrastructure security team at <a
         href="https://www.pinterest.com">Pinterest</a
-      >, where I built large-scale systems to securely <a
+      >, where I built large-scale tier 1 systems to securely <a
         href="https://en.wikipedia.org/wiki/Public_key_infrastructure"
         >distribute identity</a
       >, <a href="https://en.wikipedia.org/wiki/Authorization"
         >authorize access</a
       >, and <a href="https://github.com/pinterest/knox">manage secrets</a> across
-      the company. I worked on several tier-1 services critical to Pinterest's operations
-      alongside many talented engineers.
+      the company. Prior to Pinterest, I graduated from UC Berkeley where I led and
+      contributed to several creative machine learning projects with
+      <a href="https://launchpad.berkeley.edu">Launchpad</a>.
     </p>
 
     <p>
