feat: improve word wrap

--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -16,7 +16,7 @@ const { frontmatter } = Astro.props;
         )
       }
     </header>
-    <div class="markdown-body">
+    <div class="markdown-body wrap-anywhere">
       <slot />
     </div>
   </article>
